--- a/views/index.html
+++ b/views/index.html
@@ -39,7 +39,9 @@
                     <input type="submit" value="login" class="btn">
                 </form>
 
-                <form action="" class="sign-up-form">
+                <!-- signup form  -->
+
+                <form id = "signup" action="" class="sign-up-form">
                     <h2 class="title">sign Up</h2>
                     <div class="textbox">
                         <i class="fa fa-user" aria-hidden="true"></i>
@@ -47,7 +49,7 @@
                     </div>
                     <div class="textbox">
                         <i class="fas fa-envelope" aria-hidden="true"></i>
-                        <input type="text" placeholder="Email">
+                        <input id = "email" type="text" placeholder="Email">
                     </div>
                     <div class="textbox">
                         <i class="fas fa-phone-square-alt"></i>
@@ -67,11 +69,11 @@
                    </div>
                     <div class="textbox">
                         <i class="fa fa-lock" aria-hidden="true"></i>
-                        <input type="password" placeholder="password">
+                        <input id="signup_password" type="password" placeholder="password">
                     </div>
                     <div class="textbox">
                         <i class="fa fa-lock" aria-hidden="true"></i>
-                        <input type="password" placeholder="Confirm password">
+                        <input id="signup_confirm_password" type="password" placeholder="Confirm password">
                     </div>
                     <input type="submit" value="signup" class="btn">
                 </form>
